--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+}
+
 .head-top {
     background-color: #131921;
     width: 100%;
@@ -124,6 +128,13 @@ img.card-img {
     padding: 0px;
    
 }
+.container-fluid.for-bg-color {
+    height: 1069px;
+}
+.container-fluid.row.Card-main {
+    margin: 0;
+}
+
 
 
 
